--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>logado</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">      
-    <style rel="stylesheet" type="text/css">
-    #box_teste{
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<style rel="stylesheet" type="text/css">
+		#box_teste{
         width:720px;
         height:600px;
         margin-top:-200px;
         display: inline-block;
         border: 10px inset;
         margin-left:50px;
-		background-image: url(C:/Users/usuario/Desktop/Rudson/backgroun.jpg); background-repeat: no-repeat; background-size: 720px 600px;
+		background-image: url(/static/backgroun.jpg);
+		background-repeat: no-repeat;
+		background-size: 720px 600px;
 	}
     #box_teste_foto{
         width:405px;
@@ -20,7 +22,7 @@
         margin-top:-620px;
         margin-left:810px;
         border: 10px inset;
-        background-image: url(C:/Users/usuario/Desktop/Rudson/backgruond.jpg);
+        background-image: url(/static/backgruond.jpg);
     }
     #box_teste_escolaridade{
         width:720px;
@@ -29,7 +31,9 @@
         display: inline-block;
         border: 10px inset;
         margin-left:495px;
-        background-image: url(C:/Users/usuario/Desktop/Rudson/backgroun.jpg); background-repeat: no-repeat; background-size: 720px 600px;
+        background-image: url(/static/backgroun.jpg);
+        background-repeat: no-repeat;
+        background-size: 720px 600px;
     }
     #box_skills{
         width:405px;
@@ -37,7 +41,7 @@
         margin-top:-620px;
         margin-left:50px;
         border: 10px inset;
-        background-image: url(C:/Users/usuario/Desktop/Rudson/backgruond.jpg);
+        background-image: url(/static/backgruond.jpg);
     }
     #body{
     background-color:black;
@@ -55,7 +59,7 @@
 		width:1300px;
 		height:600px;
 		display: inline-block;
-		background-image: url(C:/Users/usuario/Desktop/Rudson/imagens/capa_pronta.png);
+		background-image: url(/static/capa_pronta.png);
 		background-repeat: no-repeat;
 		background-size: 1300px 400px;
 	}
@@ -82,34 +86,34 @@
 		text-indent: 30px;
 	}
 	#botão_meu_whatsapp{
-		display: inline-block; 
-		position: relative; 
-		left: 151px; 
-		margin-top:80px; 
-		background-color: rgb(0,225,0); 
+		display: inline-block;
+		position: relative;
+		left: 151px;
+		margin-top:80px;
+		background-color: rgb(0,225,0);
 		border: none;
 	}
 	#icone_whatsapp{
-		border-radius: 50%; 
-		height: 50px; 
-		height: 50px; 
-		position: relative; 
-		left: 1px; 
-		top:20px; 
+		border-radius: 50%;
+		height: 50px;
+		height: 50px;
+		position: relative;
+		left: 1px;
+		top:20px;
 		display: inline-block;
 	}
 	#icone_gmail{
-		height: 50px; 
-		height: 50px; 
-		position: relative; 
-		left: 201px; 
-		top:20px; 
+		height: 50px;
+		height: 50px;
+		position: relative;
+		left: 201px;
+		top:20px;
 		display: inline-block;
 	}
 	#gmail_do_cliente{
-		display:inline-block; 
-		position: relative; 
-		left: 210px; 
+		display:inline-block;
+		position: relative;
+		left: 210px;
 		backgroun-color: white;
 	}
 	#foto_de_perfil{
@@ -141,20 +145,20 @@
 		top:140px;
 	}
 	#data_nascimento{
-		display:inline-block; 
-		position: relative; 
+		display:inline-block;
+		position: relative;
 		top:140px;
 	}
 	#campo_nacionalidade{
-		font-weight:bold; 
-		display:inline-block; 
-		position: relative; 
-		margin-left:-151px; 
+		font-weight:bold;
+		display:inline-block;
+		position: relative;
+		margin-left:-151px;
 		top:180px;
 	}
 	#Nacionalidade{
-		display:inline-block; 
-		position: relative; 
+		display:inline-block;
+		position: relative;
 		top:180px;
 	}
 	#icone_escolaridade{
@@ -175,7 +179,7 @@
 		padding-right:50px;
 	}
 	#unidade_instituição_um{
-		padding-left:50px; 
+		padding-left:50px;
 		padding-right:50px;
 	}
 	#curso_instituição_um{
@@ -199,7 +203,7 @@
 		padding-right:50px;
 	}
 	#cidade_instituição_três{
-		padding-left:50px; 
+		padding-left:50px;
 		padding-right:50px;
 	}
 	#curso_instituição_três{
@@ -207,88 +211,89 @@
 		padding-right:50px;
 	}
 	#icone_estrela{
-		font-size: 100px; 
-		position: relative; 
-		left: 20px; top:20px; 
+		font-size: 100px;
+		position: relative;
+		left: 20px; top:20px;
 		display:inline-block;
 	}
 	#titulo_box_skills{
-		font-size: 50px; 
-		position: relative; 
-		left: 1px; top:20px; 
-		display:inline-block; 
+		font-size: 50px;
+		position: relative;
+		left: 1px; top:20px;
+		display:inline-block;
 		font-family: impact;
 	}
 	#skill_html{
-		font-size: 35px; 
-		position: relative; 
-		right: 270px; 
-		top:130px; 
-		display:inline-block; 
+		font-size: 35px;
+		position: relative;
+		right: 270px;
+		top:130px;
+		display:inline-block;
 		font-family: impact;
 	}
 	#progresso_html{
-		font-size: 25px; 
-		position: relative; 
-		right: -125px; 
-		top:0px; 
-		display:inline-block; 
+		font-size: 25px;
+		position: relative;
+		right: -125px;
+		top:0px;
+		display:inline-block;
 		font-weight:bold;
 	}
 	#barra_progresso_html{
-		width:200px; 
-		height:40px; 
-		position: relative; 
-		left: -20px; 
+		width:200px;
+		height:40px;
+		position: relative;
+		left: -20px;
 		top:42px;
 	}
 	#skill_css{
-		font-size: 35px; 
-		position: relative; 
-		right: 225px; 
-		top:135px; 
-		display:inline-block; 
+		font-size: 35px;
+		position: relative;
+		right: 225px;
+		top:135px;
+		display:inline-block;
 		font-family: impact;
 	}
 	#progresso_css{
-		font-size: 25px; 
-		position: relative; 
-		right: 218px; 
-		top:135px; 
-		display:inline-block; 
+		font-size: 25px;
+		position: relative;
+		right: 218px;
+		top:135px;
+		display:inline-block;
 		font-weight:bold;
 	}
 	#barra_de_progresso_css{
-		width:200px; 
-		height:40px; 
-		position: relative; 
-		left: 35px; 
+		width:200px;
+		height:40px;
+		position: relative;
+		left: 35px;
 		top:64px;
 	}
 	#skill_python{
-		font-size: 35px; 
-		position: relative; 
-		right: 170px; 
-		top:160px; 
-		display:inline-block; 
+		font-size: 35px;
+		position: relative;
+		right: 170px;
+		top:160px;
+		display:inline-block;
 		font-family: impact;
 	}
 	#progresso_python{
-		font-size: 25px; 
-		position: relative; 
-		right: 163px; 
-		top:160px; 
-		display:inline-block; 
+		font-size: 25px;
+		position: relative;
+		right: 163px;
+		top:160px;
+		display:inline-block;
 		font-weight:bold;
 	}
 	#barra_de_progresso_python{
-		width:200px; 
-		height:40px; 
-		position: relative; 
-		left: 35px; 
+		width:200px;
+		height:40px;
+		position: relative;
+		left: 35px;
 		top:122px;
 	}
 	</style>
+	<link rel="stylesheet" href="novo_template.css">
 </head>
 <body id="body">
 	<div id="div_da_capa">
@@ -297,16 +302,16 @@
     <div id="box_teste">
         <h1 id="titulo_box_teste">Sobre mim</h1>
         <p id="primeiro_paragrafo_box_teste">
-            Estou me graduando em análise em desenvolvimento de sistemas e pretendo ingressar no ramo da programação. 
-			Atualmente estou mais focado em web, mas estou aberto a outras áreas. Até o momento uso Python, 
-			mas posso me desenvolver em outras linguagens de programação de acordo com a necessidade da empresa. 
+            Estou me graduando em análise em desenvolvimento de sistemas e pretendo ingressar no ramo da programação.
+			Atualmente estou mais focado em web, mas estou aberto a outras áreas. Até o momento uso Python,
+			mas posso me desenvolver em outras linguagens de programação de acordo com a necessidade da empresa.
 			Minha meta é se fixar em uma empresa e crescer dentro dela de estagiário á programador sênior.
         </p>
 		<p id="segundo_paragrafo_box_teste">
-			Não tenho experiencia profissional ainda, 
-			minha prática de programação até aqui é das atividades da faculdade e meus projetos pessoais. 
-			Todos os dias busco um pouco aprimorar meus domínios em HTML e CSS, em breve também Javascript e banco de dados. 
-			Tenho mais conhecimento de front-end, mas quero também me capacitar em back-end. 
+			Não tenho experiencia profissional ainda,
+			minha prática de programação até aqui é das atividades da faculdade e meus projetos pessoais.
+			Todos os dias busco um pouco aprimorar meus domínios em HTML e CSS, em breve também Javascript e banco de dados.
+			Tenho mais conhecimento de front-end, mas quero também me capacitar em back-end.
 		</p>
 		<button id="botão_meu_whatsapp">
             <a style="text-decoration:none;" href= "https://wa.me/5585991270473?text=Vamos%20conversar" target="_blank">
@@ -314,8 +319,8 @@
             </a>
         </button>
 		<p style="display:inline-block;">
-			<img id="icone_whatsapp" src="C:/Users/usuario/Desktop/Rudson/unnamed.png">
-			<img id="icone_gmail" src="C:/Users/usuario/Desktop/Rudson/gmail.png">
+			<img id="icone_whatsapp" src="/static/unnamed.png">
+			<img id="icone_gmail" src="/static/gmail.png">
 		</p>
 		<p id="gmail_do_cliente">
 			rudson1internauta@gmail.com
@@ -323,7 +328,7 @@
     </div>
     <div id="box_teste_foto">
 		<span style="display:inline-block;">
-			<img id="foto_de_perfil" src="C:/Users/usuario/Desktop/Rudson/perfil_editado.jpg">
+			<img id="foto_de_perfil" src="/static/perfil_editado.jpg">
 		</span>
 		<p id="campo_nome">Nome:</p>
 		<p id="nome_de_perfil"> Rudson de Souza Barros</P>
