--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         display: inline-block;
         border: 10px inset;
         margin-left:50px;
-	background-image: url(backgroun.jpg);
+	background-image: url(/backgroun.jpg);
 	background-repeat: no-repeat;
 	background-size: 720px 600px;
 	}
