--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         margin-top:-620px;
         margin-left:810px;
         border: 10px inset;
-        background-image: url(/static/backgruond.jpg);
+        background-image: url(/backgruond.jpg);
     }
     #box_teste_escolaridade{
         width:720px;
@@ -31,7 +31,7 @@
         display: inline-block;
         border: 10px inset;
         margin-left:495px;
-        background-image: url(/static/backgroun.jpg);
+        background-image: url(/backgroun.jpg);
         background-repeat: no-repeat;
         background-size: 720px 600px;
     }
@@ -41,7 +41,7 @@
         margin-top:-620px;
         margin-left:50px;
         border: 10px inset;
-        background-image: url(/static/backgruond.jpg);
+        background-image: url(/backgruond.jpg);
     }
     #body{
     background-color:black;
@@ -59,7 +59,7 @@
 		width:1300px;
 		height:600px;
 		display: inline-block;
-		background-image: url(/static/capa_pronta.png);
+		background-image: url(/capa_pronta.png);
 		background-repeat: no-repeat;
 		background-size: 1300px 400px;
 	}
@@ -319,8 +319,8 @@
             </a>
         </button>
 		<p style="display:inline-block;">
-			<img id="icone_whatsapp" src="/static/unnamed.png">
-			<img id="icone_gmail" src="/static/gmail.png">
+			<img id="icone_whatsapp" src="/unnamed.png">
+			<img id="icone_gmail" src="/gmail.png">
 		</p>
 		<p id="gmail_do_cliente">
 			rudson1internauta@gmail.com
@@ -328,7 +328,7 @@
     </div>
     <div id="box_teste_foto">
 		<span style="display:inline-block;">
-			<img id="foto_de_perfil" src="/static/perfil_editado.jpg">
+			<img id="foto_de_perfil" src="/perfil_editado.jpg">
 		</span>
 		<p id="campo_nome">Nome:</p>
 		<p id="nome_de_perfil"> Rudson de Souza Barros</P>
