--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </a>
         </button>
 		<p style="display:inline-block;">
-			<img id="icone_whatsapp" src="/unnamed.png">
+			<img id="icone_whatsapp" src="unnamed.png">
 			<img id="icone_gmail" src="/gmail.png">
 		</p>
 		<p id="gmail_do_cliente">
