--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 		background-size: 1300px 400px;
 	}
 	#Nome_principal{
+		font-size: 100px;
 		padding-left:50px;
 		margin-top:150px;
-		font-family: impact;
+		font-family: Brush Script MT;
 		color: white;
 	}
 	#titulo_box_teste{
