--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 	#progresso_html{
 		font-size: 25px;
 		position: relative;
-		right: -125px;
+		right: -31%;
 		top:0px;
 		display:inline-block;
 		font-weight:bold;
