--- a/index.html
+++ b/index.html
@@ -294,6 +294,11 @@
 		left: 35px;
 		top:122px;
 	}
+	@media (max-width: 490px) {
+		#progresso_html{
+			right: -19%;
+		}
+	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
 </head>
