--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
 		#progresso_html{
 			right: -9%;
 		}
+		#barra_de_progresso_python{
+			top: 50%	
+		}
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
