--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
 			right: -9%;
 		}
 		#barra_de_progresso_python{
-			top: 15%
-			position: relative;
+			top: 15%;
+			left: 50%;
 		}
 	}
 	</style>
