--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
 	@media (max-width: 490px) {
 		#progresso_html{
 			right: -9%;
+			left: -30%;
 		}
 		#barra_de_progresso_python{
 			top: 15%;
