--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 		top:122px;
 	}
 	@media (max-width: 490px) {
-		#progresso_html{
+		#barra_progresso_html{
 			right: -9%;
 			left: -30%;
 		}
