--- a/index.html
+++ b/index.html
@@ -303,6 +303,9 @@
 			top: 15%;
 			left: -30%;
 		}
+		#barra_de_progresso_css{
+			left: -26px;
+		}
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
