--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@
 			left: -19%;
 			right: -9%;
 		}
+		#skill_html{
+			left: -19%;
+			right: -9%;
+		}
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
