--- a/index.html
+++ b/index.html
@@ -312,6 +312,11 @@
 			right: 7%;
 			top: -1%;
 		}
+		#skill_css{
+			left: 15%;
+			right: 7%;
+			top: 20%;
+		}
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
