--- a/index.html
+++ b/index.html
@@ -317,6 +317,11 @@
 			right: 7%;
 			top: 3%;
 		}
+		#skill_python{
+			left: 15%;
+			right: 7%;
+			top: 7%;	
+		}
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
