--- a/index.html
+++ b/index.html
@@ -322,6 +322,10 @@
 			right: 7%;
 			top: 6%;	
 		}
+		#progresso_html{
+			left: 1%;
+			right: 7%;
+			top: -1%;
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
