--- a/index.html
+++ b/index.html
@@ -323,9 +323,13 @@
 			top: 6%;	
 		}
 		#progresso_html{
-			left: 15%;
+			left: 20%;
 			right: 7%;
 			top: -1%;
+		#progresso_css{
+			left: 20%;
+			right: 7%;
+			top: 3%;
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
