--- a/index.html
+++ b/index.html
@@ -327,9 +327,11 @@
 			right: 7%;
 			top: -1%;
 		#progresso_css{
-			left: 20%;
+			left: 50%;
 			right: 7%;
 			top: 3%;
+			background-color: blue;
+
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
