--- a/index.html
+++ b/index.html
@@ -332,6 +332,11 @@
 			right: 7%;
 			top: 3%;
 		}
+		#progresso_python{
+			left: 20%;
+			right: 7%;
+			top: 7%;
+		}
 	}
 	</style>
 	<link rel="stylesheet" href="novo_template.css">
